# motus_ui

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
apps/: __init__.py  hitl.py  server.py  tui.py
core/: __init__.py  runtime_catalog.py
docs/: development-guide.md  frontend-integration-guide.md  hitl-p0-p3-matrix.md  hitl-p0-p3-smoke.md  motus-backend-p0-p2-plan.md  motus-backend-p0-p2-smoke.md  motus-backend-p0-p2-todo.md  open-source-audit.md  open-source-release-checklist.md  project-structure.md  runtime-requirements.md  system-smoke-test-plan.md  system-smoke-test-results.md  tauri-webui-migration-plan.md  webui-p0-p3-TODO.md  webui-p0-p3-smoke.md  webui-p0-p3-改造矩阵.md  webui-升级适配清单.md  webui-开发计划.md  webui-重写安全规范.md  前端接入说明.md  开发文档.md  真实-HITL-WebUI-P0-P3-smoke.md  真实-HITL-WebUI-P0-P3-矩阵.md  真实-HITL-WebUI-联调结果.md  真实-HITL-端到端联调结果.md  真实-provider-HITL-联调矩阵.md  项目结构梳理.md
scripts/: __init__.py  sync_runtime_requirements_doc.py
skills/: README.md  android-native-dev  buddy-sings  flutter-dev  frontend-dev  fullstack-dev  gif-sticker-maker  ios-application-dev  minimax-docx  minimax-multimodal-toolkit  minimax-music-gen  minimax-music-playlist  minimax-pdf  minimax-xlsx  pptx-generator  react-native-dev  shader-dev  vision-analysis
tests/: test_agent_prompt.py  test_api_session_backend.py  test_costs.py  test_hitl_backend.py  test_hitl_server_recovery.py  test_hitl_state.py  test_hitl_telemetry.py  test_motus_p0_runtime.py  test_motus_p1_model_config.py  test_motus_p2_runtime.py  (+7 more)
(+263 files in other folders)
